# sota_thinclient

./: .gitignore  README.md  pyproject.toml
examples/: sample.wav-orig  sota_mic_reader.py  sota_pose_sample.py  sota_speaker_sender.py  sota_video_reader.py
sota_thinclient/: __init__.py  audio.py  connection_manager.py  http.py  http_audio_stream.py  http_video_stream.py  pose.py  stream.py  udp_stream.py
