[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "sota_thinclient"
dynamic=["version"]
description = "Python connector to the SOTA robot thinserver"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="James Young", email="young@cs.umanitoba.ca" }
]
license = { file="LICENSE" }
dependencies = [
#    "sounddevice"  # only needed for test programs
    "requests"
]
