[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "sota_thinclient/_version.py"

[project]
name = "sota_thinclient"
dynamic=["version"]
description = "Python connector to the SOTA robot thinserver"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="James Young", email="young@cs.umanitoba.ca" }
]
license = { file="LICENSE" }
dependencies = [
#    "sounddevice"  # only needed for test programs
    "requests"
]

[project.optional-dependencies]
test = [
    "sounddevice",
    "pygame",
    "pillow",
    "sounddevice",
    "numpy",
    "scipy"
]
